[project]
name = "drishti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyproj>=3.7.2",
    "rasterio>=1.4.4",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
]
